Fix loading screen having scrollbars

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,12 +75,12 @@ html {
     @extend .text-muted;
     align-items: center;
     display: flex;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     left: 0;
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%; // Not 100vw because that overlaps the scrollbar
     z-index: 0;
 }
 
